# SDGPT-BOT

./: README.md  config.cfg  pyproject.toml  requirements.txt  run.bat
presets/: PromptGenerator.txt
